[package]
name = "fin"
version = "0.1.0"
edition = "2021"

# Key generation in apss library
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consensus = { package = "consensus", path="../"}
crypto = { package="crypto" , path = "../../crypto"}
crypto_blstrs = {package = "crypto_blstrs", path = "../../crypto_blstrs"}
types = { package = "types", path="../../types"}
sha2="0.9.2"
config = { package = "config", path="../../config"}
tokio = { version = "1.0", features = ["full"] }
futures = "^0.3"
bincode = "1"
bytes = "1.0"
tokio-util = "0.6"
tokio-stream = "0.1"
serde = "1.0.70"
log="*"
priority-queue="1"
fnv = "1"
async-recursion = "1.0.0"
serde_derive = "1.0"
rand = "0.7.3"
anyhow = "1"
async-trait = "0"
futures-util = "0"
network = { package = "network", git = "https://github.com/libdist-rs/libnet-rs.git" }
nohash-hasher = "0.2.0"